sf-src/force-app/main/default/objects/Account/fields/ContractRenewalDate__c.field-meta.xml
<CustomField>
    <fullName>ContractRenewalDate__c</fullName>
    <label>契約更新日</label>
    <type>Date</type>
</CustomField>