sf-src/force-app/main/default/objects/Account/fields/CSOwner__c.field-meta.xml
<CustomField>
    <fullName>CSOwner__c</fullName>
    <label>CS担当者</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>CS担当取引先</relationshipLabel>
    <relationshipName>CS_Accounts</relationshipName>
</CustomField>