sf-src/force-app/main/default/objects/Account/fields/CSStatus__c.field-meta.xml
<CustomField>
    <fullName>CSStatus__c</fullName>
    <label>CSステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>オンボーディング中</fullName>
            </value>
            <value>
                <fullName>活用中</fullName>
            </value>
            <value>
                <fullName>リスク</fullName>
            </value>
            <value>
                <fullName>チャーン</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>