sf-src/force-app/main/default/objects/Account/fields/LastCSContactDate__c.field-meta.xml
<CustomField>
    <fullName>LastCSContactDate__c</fullName>
    <label>最終CS連絡日</label>
    <type>Date</type>
</CustomField>