sf-src/force-app/main/default/objects/Account/fields/PrimaryEmail__c.field-meta.xml
<CustomField>
    <fullName>PrimaryEmail__c</fullName>
    <label>メインメール（名寄せキー）</label>
    <type>Email</type>
</CustomField>